--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,14 @@
     <version>1.2-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.source>8</java.source>
-        <java.target>8</java.target>
+        <java.source>17</java.source>
+        <java.target>17</java.target>
         <owner.version>1.0.12</owner.version>
         <cucumber.version>7.2.3</cucumber.version>
-        <aspectj.version>1.9.6</aspectj.version>
+        <aspectj.version>1.9.20.1</aspectj.version>
         <aspectj-maven-plugin.version>1.14.0</aspectj-maven-plugin.version>
         <surefire.version>2.22.2</surefire.version>
-        <selenide.version>6.2.0</selenide.version>
+        <selenide.version>7.0.1</selenide.version>
         <log4j.version>2.15.0</log4j.version>
         <slf4j.version>1.7.30</slf4j.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -48,12 +48,13 @@
                     <suiteXmlFiles>
                         <suiteXmlFile>src/test/resources/suite.xml</suiteXmlFile>
                     </suiteXmlFiles>
-                    <testFailureIgnore>false</testFailureIgnore>
+                    <testFailureIgnore>true</testFailureIgnore>
                     <skipTests>false</skipTests>
                     <argLine>
                         -Dcucumber.filter.tags="${tags}"
                         -Dfile.encoding=UTF-8
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                        --add-opens java.base/java.lang=ALL-UNNAMED
                     </argLine>
                     <systemPropertyVariables>
                         <base.dir>${project.basedir}/</base.dir>
@@ -119,8 +120,11 @@
     </build>
 
     <dependencies>
-        <!--cucumber-->
-
+        <!--        <dependency>-->
+        <!--            <groupId>com.github.valfirst.browserup-proxy</groupId>-->
+        <!--            <artifactId>browserup-proxy-core</artifactId>-->
+        <!--            <version>2.2.7</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
@@ -149,6 +153,13 @@
             <version>${allure.version}</version>
         </dependency>
         <!--allure-->
+        <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
+            <scope>runtime</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.aspectj</groupId>
@@ -212,6 +223,24 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjtools</artifactId>
+            <version>${aspectj.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.6.2</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
